# giraffe

./: .clang-format  .gitignore  .gitmodules  .travis.yml  README.md  install_hooks.sh
.github/workflows/: ccpp.yml
assignments/hw1/: CMakeLists.txt
assignments/hw1/src/: Camera.cpp  Camera.h  Geometry.cpp  Geometry.h  Image.cpp  Image.h  Light.cpp  Light.h  Makefile  Material.cpp  Material.h  Ray.cpp  Ray.h  Scene.cpp  Scene.h  Shape.cpp  Shape.cpp.cpp  Shape.h  defs.h  main.cpp  members.txt  reopen_image.sh  tinyxml2.h  watcher.sh
assignments/hw1/src/DO_NOT_SUBMIT_BLENDER_ARTIFACTS/: chess.blend  chess_triangulated.blend
assignments/hw1/src/bonus_scene/: README.md  chess.xml
assignments/hw1/src/giraffe_scenes/: glass.xml  three_glasses.xml
assignments/hw1/src/tools/obj2xml/: cameras.xml  out.json
assignments/hw1/src/tools/obj2xml/gifbuilder/: animate.sh
assignments/hw1/src/tools/obj2xml/obj2xml/: __init__.py  core.py  readers.py  utils.py  writers.py
assignments/hw2/: CMakeLists.txt
assignments/hw2/src/: Camera.cpp  Camera.h  Color.cpp  Color.h  Helpers.cpp  Helpers.h  LineSegment.cpp  LineSegment.h  Main.cpp  Makefile  Matrix4.cpp  Matrix4.h  Model.cpp  Model.h  Rotation.cpp  Rotation.h  Scaling.cpp  Scaling.h  Scene.cpp  Scene.h  Translation.cpp  Translation.h  Triangle.cpp  Triangle.h  Vec3.cpp  Vec3.h  Vec4.cpp  Vec4.h  tinyxml2.cpp  tinyxml2.h
assignments/hw2/src/examples/own_examples/: empty_box.xml
assignments/hw2/src/tools/: test_suite.py
assignments/hw3/: CMakeLists.txt
assignments/hw3/src/: Giraffe.h  Makefile  flat.cpp  globals.h  shader.frag  shader.vert  sphere.cpp  state.h  util.cpp  util.h
assignments/hw3/src/code_generation/: __base.cpp  flat.cpp  generate.py
assignments/hw3/src/shaders/: sphere.vert
assignments/hw3/src/templates/: __base.cpp  flat.cpp  sphere.cpp
hooks/: pre-commit
learning/opengl-stuff/: CMakeLists.txt
learning/opengl-stuff/include/glad/: glad.h
learning/opengl-stuff/src/: glad.c  main.cpp
